# wiztree-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: mcp-build-research.md  mcp-full-docs-research.md
src/wiztree_mcp/: __init__.py  __main__.py  csv_importer.py  database.py  models.py  server.py  wiztree_cli.py
src/wiztree_mcp/tools/: __init__.py  analysis.py  compare.py  manage.py  query.py  scan.py
tests/: __init__.py  test_csv_importer.py  test_db_quick.py
